<resources>
    <string name="app_name">UCCMobileApp</string>
    <string name="admission_requirements">
    Five (5) CSEC subjects including English and Mathematics
        (A CSEC pass at level 3 must have been obtained since 1998.)\n
        Candidates with a minimum of 4 CXCs can apply pending outstanding CSEC results
        (or do UCC replacement courses - Core Mathematics, English for Academic Purpose)
    </string>
    <string name="about_IT">
        Degree Type: Bachelor of Science\n
        Credits: 124\n
        Next Start Date: May (Summer) 2025\n
        Awarding Institution: University of the Commonwealth Caribbean\n
        Delivery Modality: 100% Online &amp; Blended
    </string>
    <string name="apply_online">Apply Online</string>
    <string name="apply_now">Apply Now</string>
    <string name="visit_website">Visit our Website</string>
    <string name="visit_page">Admissions Page</string>
    <string name="view_internation_students">View International Students</string>
    <string name="international_student_requirements">International Student Requirements</string>
    <string name="for_jamaican_students">For Jamaican Students:</string>
    <string name="requirements">Admission Requirements</string>
    <string name="_100_online_amp_blended"><![CDATA[100% Online & Blended]]></string>
    <string name="online_learning">Online Learning</string>
    <string name="may_summer_2025">May (Summer) 2025</string>
    <string name="start_date">Start Date</string>
    <string name="program_details">Program Details</string>
    <string name="bachelor_of_science_bsc">Bachelor of Science (BSc)</string>
    <string name="programme">Information Technology</string>
    <string name="app_version">App Version 1.0.0</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="arrow_right">Arrow Right</string>
    <string name="main_user">Main User</string>
    <string name="view_campus_on_map">View Campus on Map</string>
    <string name="map_preview">Map preview</string>
    <string name="ucc_motto">Fostering Leadership and Innovation</string>
    <string name="university_name">University of the Commonwealth Caribbean (UCC)</string>
    <string name="university_logo_desc">University Logo</string>
    <string name="app_dev_team"><![CDATA[Kareem Saunders & Ramone Cunningham]]></string>
    <string name="course_icon">Course Icon</string>
    <string name="close">Close</string>
    <string name="prerequisites_header">Prerequisites:</string>
    <string name="divider">|</string>
    <string name="fab_desc">Email HOD</string>
    <string name="open_menu">Open Menu</string>
    <string name="image_of_faculty_members">image of faculty members</string>
    <string name="call">Dial</string>
    <string name="email">Email</string>
    <string name="your_email">your email address</string>
    <string name="subject">Subject:</string>
    <string name="your_message">your message</string>
    <string name="send_email">Send Email</string>
    <string name="scroll_left">Scroll Left</string>
    <string name="scroll_right">Scroll Right</string>
    <string name="about_this_app">About This App</string>
    <string name="profile_image">Profile Image</string>
    <string name="refresh">Refresh</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="home">Home</string>
    <string name="faculty_directory">Faculty Directory</string>
    <string name="courses">Courses</string>
    <string name="admissions">Admissions</string>
    <string name="social_media">Social Media</string>
    <string name="settings">Settings</string>
    <string name="welcomes_you">Welcomes You!</string>
    <string name="about_us">About UCC</string>
    <string name="about_ucc">About University of the Commonwealth Caribbean (UCC)</string>
    <string name="about_ucc_info_off_website">
        The University of the Commonwealth Caribbean (UCC), registered as a University by the
        University Council of Jamaica, is Jamaica’s largest, fastest-growing, non-affiliated
        private institution of higher education, and is now one of six higher education entities with the
        accolade of institutional accreditation from the University Council of Jamaica.
        UCC is also institutionally accredited internationally by the UK-based Accreditation Service for
        International Colleges and Universities, and is registered by the Jamaica Tertiary Education Commission,
        JTEC, the official GOJ regulatory body, as a Teaching University.\n\n
        UCC is headquartered in Kingston, Jamaica, with five physical campuses and UCC Online.
        UCC was formed in 2004, as a result of a merger in 2002 of the Institute of Management
        Sciences, which was incorporated in 1992, and the Institute of Management and Production,
        which was incorporated in 1976.\n\n
        UCC offers a range of disciplines, from the professional certificate to the graduate levels.
        The institution currently has approximately 7,000 students, and some 400 faculty and staff members,
        including part-time and full-time academic staff. Throughout its history, UCC has been characterized by
        dynamic entrepreneurialism and international university partnerships. These partnerships include the
        University of London – UCC is the only local high education institution to be recognized as an
        affiliate University of London institution, for the purpose of providing support to Jamaican students
        enrolled in the Certificate of Higher Education in Common Law, and the Bachelor of Laws degree program.\n\n
        The University of the Commonwealth Caribbean also partnered with Florida International University since the
        beginning of the 21st Century, in offering various degree programs, andhas licensed the CEMBA and the CEMPA
        Master’s degree programs from the Commonwealth of Learning.\n
    </string>
    <string name="barcode_ucc">Barcode for UCC</string>
    <string name="name_of_app">CampusPulse©</string>

</resources>