<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="bottom"
    android:padding="20dp"
    android:background="#378DAF"
    android:layout_height="180dp">

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="4dp"
        android:backgroundTint="#CACACA">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ucc_logo"
            android:contentDescription="@string/university_logo_desc"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/university_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomes_you"
        android:textColor="#323232"
        android:textStyle="bold"
        android:textSize="13sp" />

</LinearLayout>