<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hodFragmentYourEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/hodFragmentHODEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hodFragmentSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hodFragmentMessage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="top"
            android:hint="@string/your_message"
            android:inputType="textMultiLine|textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/hodFragmentSendEmailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_send_24"
        android:paddingEnd="181dp"
        android:paddingStart="1dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/send_email"/>

</LinearLayout>