<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light_gray_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Title -->
        <TextView
            android:id="@+id/uccTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_ucc"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp" />

        <!-- YouTube Video -->
        <WebView
            android:id="@+id/uccVideoWebView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp" />

        <!-- Description -->
        <TextView
            android:id="@+id/uccDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_ucc_info_off_website"
            android:textSize="14sp"
            android:textColor="#444444"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:id="@+id/uccBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ucc_qr_code"
            android:contentDescription="@string/barcode_ucc"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>
</ScrollView>
