<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/admissionsProgramHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/admissionsDegreeTypeHeader"
                    android:text="@string/programme"
                    android:textSize="35sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                <TextView
                    android:id="@+id/admissionsDegreeTypeHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/admissionsProgramHeader"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp"
                    android:text="@string/bachelor_of_science_bsc"
                    android:textSize="25sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/admissionsProgramDetailsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/program_details"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="#BCB9B9"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/admissionsUniversityIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/admissionsUniversityName"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/uni_icon"
                        android:contentDescription="@string/university_name" />

                    <TextView
                        android:id="@+id/admissionsUniversityName"
                        android:layout_width="280dp"
                        android:layout_height="45dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/admissionsUniversityIcon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="17sp"
                        tools:ignore="TextSizeCheck"
                        android:text="@string/university_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/admissionsCalendarIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/admissionsStartDate"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/calendar_icon"
                        android:contentDescription="@string/start_date"/>

                    <TextView
                        android:id="@+id/admissionsStartDate"
                        android:layout_width="280dp"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        app:layout_constraintStart_toEndOf="@id/admissionsCalendarIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textSize="17sp"
                        android:text="@string/may_summer_2025"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:id="@+id/admissionsDeliveryMethodIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/admissionsDeliveryMethod"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/online_icon"
                        android:contentDescription="@string/online_learning"/>

                    <TextView
                        android:id="@+id/admissionsDeliveryMethod"
                        android:layout_width="280dp"
                        android:layout_height="45dp"
                        app:layout_constraintStart_toEndOf="@id/admissionsDeliveryMethodIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="center_vertical"
                        android:text="@string/_100_online_amp_blended"
                        android:textSize="17sp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/admissionsAdmissionRequirementsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/requirements"
                    android:textSize="20sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/admissionsForJamaicanStudentsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/for_jamaican_students"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/admissionsRequirements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    android:text="@string/admission_requirements"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

                <!-- International Requirements Card • -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/admissionsFragRequirementsForInternationalButton">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="12dp"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            app:layout_constraintTop_toBottomOf="@+id/admissionsFragRequirementsForInternationaltextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="17sp"
                            android:text="@string/international_student_requirements"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                        <ImageView
                            app:layout_constraintTop_toBottomOf="@+id/admissionsFragRequirementsForInternationalIcon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/baseline_open_in_new_24"
                            android:contentDescription="@string/view_internation_students" />

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Action Cards -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:weightSum="2"
            android:showDividers="middle">

            <!-- University Website -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="1dp"
                android:layout_marginEnd="4dp"
                android:id="@+id/admissionsFragVisitWebsiteButton">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/admissionsFragVisitWebsiteIcon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/earth_icon"
                        android:contentDescription="@string/visit_website"/>

                    <TextView
                        android:id="@+id/admissionsFragVisitWebsiteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="17sp"
                        android:text="@string/visit_page"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Apply Now -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="1dp"
                android:layout_marginStart="4dp"
                android:id="@+id/admissionsFragApplyOnlineButton">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/admissionsFragApplyOnlineIcon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/apply_icon"
                        android:contentDescription="@string/apply_online"/>

                    <TextView
                        android:id="@+id/admissionsFragApplyOnlineTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="17sp"
                        android:text="@string/apply_now"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>


    </LinearLayout>


</ScrollView>